# redpen

./: Cargo.toml  README.md  libadjustment.klint  rust-toolchain
.github/workflows/: ci.yml  nightly.yml
commands/: redpen.rs  wrapper.rs
crates/redpen-shim/: Cargo.toml
crates/redpen-shim/src/: lib.rs
doc/: disallow.md  dont_panic.md
src/: atomic_context.rs  attribute.rs  blocking_async.rs  ctxt.rs  disallow.rs  infallible_allocation.rs  main.rs  mir.rs  monomorphize_collector.rs  panic_freedom.rs  reachability.rs  reachability_check.rs  serde.rs  symbol.rs  util.rs
src/mir/: drop_shim.rs
src/preempt_count/: adjustment.rs  annotation.rs  check.rs  dataflow.rs  expectation.rs  mod.rs
tests/: compile-test.rs
tests/ignored_ui/: disallow.stderr  dont_panic.stderr  dont_panic_2.stderr  dont_panic_idx.stderr
tests/ui/: blocking-calls-in-async.rs  blocking-calls-in-async.stderr  cmp_alloc.rs  cmp_alloc.stderr  disallow.rs  disallow.stderr  dont_panic.rs  dont_panic.stderr  dont_panic_2.rs  dont_panic_2.stderr  dont_panic_idx.rs  dont_panic_idx.stderr  panic_on_drop.rs  panic_on_drop.stderr
