[package]
name = "redpen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
home = "0.5"

[dev-dependencies]
compiletest_rs = { version = "0.10", features = [ "tmp" ] }

[package.metadata.rust-analyzer]
# This crate uses #![feature(rustc_private)] to access `rustc` APIs.
# We're tied to the specific `rustc` version 1.72.0.
rustc_private = true
