[package]
name = "redpen-shim"
version = "0.2.0"
edition = "2021"
description = "A proc-macro attribute provider that allows crates to annotate their code with redpen lints without breaking their build."
authors = ["Esteban Küber <esteban@kuber.com.ar>"]
documentation = "https://docs.rs/redpen-linter"
repository = "https://github.com/estebank/redpen"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
